--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "msg_noise"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2024"
 authors = ["ffmulks <63452434+ffmulks@users.noreply.github.com>"]
 description = "Seeded noise generation for Bevy games"
@@ -10,9 +10,9 @@ keywords = ["bevy", "noise", "perlin", "gamedev", "procedural"]
 categories = ["game-development"]
 
 [dependencies]
-bevy = { version = "0.17", default-features = false }
+bevy = { version = "0.18", default-features = false }
 noise = "0.9"
-msg_rng = { git = "https://github.com/MolecularSadism/msg_rng", tag = "v0.2.0" }
+msg_rng = { git = "https://github.com/MolecularSadism/msg_rng", branch = "main" }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
